# rust_small_projects

./: Untitled.developerprofile
backtrace_sudoku/: Cargo.toml
backtrace_sudoku/src/: main.rs
dioxus_foldable_menu/: Cargo.toml  dioxus.toml
dioxus_foldable_menu/assets/: calendar.css  drop_menu.css  style.css
dioxus_foldable_menu/src/: components.rs  main.rs  pages.rs  test.rs
dioxus_foldable_menu/src/pages/: about.rs  calendar.rs  contact.rs  drag_drop.rs  home.rs  menu.rs  services.rs
fractal/: Cargo.toml  README
fractal/src/: main.rs
